# Vision-Based-Desktop-Automation

./: README.md  pyproject.toml  task.py  vision.py
